# prestobot_v2.7

./: README.md  manual.txt
prestobot_bringup/: CMakeLists.txt  manual.txt  package.xml
prestobot_bringup/config/: xbox_config.yaml
prestobot_bringup/launch/: navigation_realrobot.launch.xml  navigation_simulation.launch.xml  slam_realrobot.launch.xml  slam_simulation.launch.xml
prestobot_bringup/maps/: LR001.pgm  LR001.yaml
prestobot_bringup/rviz/: slam_config.rviz
prestobot_controller/: CMakeLists.txt  manual_cli.txt  package.xml
prestobot_controller/config/: prestobot_controller.yaml
prestobot_controller/launch/: controller.launch.xml
prestobot_description/: CMakeLists.txt  manual_cli.txt  package.xml
prestobot_description/launch/: display.launch.xml  robot_description.launch.xml
prestobot_description/rviz/: urdf_config.rviz
prestobot_description/urdf/: prestobot.gazebo.xacro  prestobot.parts.xacro  prestobot.ros2_control.xacro  prestobot.urdf.xacro
prestobot_firmware/: CMakeLists.txt  package.xml
prestobot_firmware/arduino/robot_control/: robot_control.ino
prestobot_hardware/: CMakeLists.txt  package.xml  prestobot_interface.xml
prestobot_hardware/include/prestobot_hardware/: prestobot_interface.hpp
prestobot_hardware/launch/: display.launch.xml  hardware.launch.xml
prestobot_hardware/src/: prestobot_interface.cpp
prestobot_navigation/: CMakeLists.txt  manual_cli.txt  package.xml
prestobot_navigation/config/: prestobot_navigation.yaml
prestobot_navigation/launch/: display.launch.xml  navigation.launch.xml
prestobot_navigation/maps/: map.pgm  map.yaml
prestobot_navigation/rviz/: navigation_config_v1_1.rviz
prestobot_py_pkg/: package.xml  setup.cfg  setup.py
prestobot_py_pkg/prestobot_py_pkg/: hmi.py  mpu6050_driver.py  set_initial_pose.py  topic_relay.py
prestobot_simulation/: CMakeLists.txt  manual_cli.txt  package.xml
prestobot_simulation/config/: gazebo_bridge.yaml
prestobot_simulation/launch/: display.launch.xml  gazebo.launch.xml
prestobot_simulation/worlds/: hallway.world
